DNN-6817 Added word-wrap to make sure long strings are displayed within the fixed area.

--- a/Website/Portals/_default/default.css
+++ b/Website/Portals/_default/default.css
@@ -1278,6 +1278,10 @@ td > .dnnLabel {
     border-top: 7px solid #000;
 }*/
 
+.dnnTooltip .dnnFormHelpContent .dnnHelpText {
+    word-wrap: break-word;
+}
+
 .bottomArrow:after
 {
     position: absolute;
